cmake_minimum_required(VERSION 3.13)
project(xv6_public C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(xv6_public
        asm.h
        bio.c
        bootmain.c
        buf.h
        cat.c
        console.c
        date.h
        defs.h
        echo.c
        elf.h
        exec.c
        fcntl.h
        file.c
        file.h
        forktest.c
        fs.c
        fs.h
        getChildrenTest.c
        getCountTest.c
        grep.c
        ide.c
        init.c
        ioapic.c
        kalloc.c
        kbd.c
        kbd.h
        kill.c
        lapic.c
        ln.c
        log.c
        ls.c
        main.c
        memide.c
        memlayout.h
        mkdir.c
        mkfs.c
        mmu.h
        mp.c
        mp.h
        OriginalSchedTest.c
        param.h
        picirq.c
        pipe.c
        policyTest.c
        printf.c
        PrioritySchedTest.c
        proc.c
        proc.h
        rm.c
        sh.c
        sleeplock.c
        sleeplock.h
        spinlock.c
        spinlock.h
        stat.h
        stressfs.c
        string.c
        syscall.c
        syscall.h
        sysfile.c
        sysproc.c
        timeTest.c
        trap.c
        traps.h
        types.h
        uart.c
        ulib.c
        umalloc.c
        user.h
        usertests.c
        vm.c
        wc.c
        x86.h
        zombie.c ticketlock.c ticketlock.h ticketlockTest.c rwTest.c)
